# ForgeCAM

./: .gitignore  API_SPECIFICATION.md  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
annotations/: CLAUDE.md
cutscript/: CLAUDE.md  LANGUAGE.markdown
document/: CLAUDE.md  Cargo.toml
document/src/: lib.rs  metadata.rs  session.rs
geometry/: API.md  CLAUDE.md  Cargo.toml
geometry/docs/: cad-cam-roadmap.md  kernel-migration.md  overview.md  parametrizations.md  ssi-pipeline.md
geometry/src/: contour2d.rs  curves.rs  curves2d.rs  engagement.rs  entity_ref.rs  intersection.rs  lib.rs  mesh.rs  polygon2d.rs  surfaces.rs  types.rs  utils.rs
gui/: CLAUDE.md  Cargo.toml
gui/mockup/: dual.html  index.html  ultrawide-light.html  ultrawide.html
gui/src/: main.rs
gui/src/viewport/: camera.rs  mod.rs
gui/ui/: app.slint  companion.slint  properties.slint  statusbar.slint  theme.slint  toolbar.slint  tree.slint
kernel/: CLAUDE.md  Cargo.toml  FEASIBILITY_REPORT.md  HITLIST.md  TODO.md
kernel/docs/: algo to pick solver.markdown  resources found.txt
kernel/rustkernel-boolean/: CLAUDE.md
kernel/rustkernel-boolean/src/: broad_phase.rs  curve_trimming.rs  face_classifier.rs  face_splitter.rs  ops.rs  section.rs  topology_builder.rs
kernel/rustkernel-builders/: CLAUDE-local-ops.md  CLAUDE-primitives.md  CLAUDE-sweeps.md  Cargo.toml  FILLET-ROADMAP.md
kernel/rustkernel-builders/src/: box_builder.rs  chamfer_builder.rs  cone_builder.rs  cylinder_builder.rs  edge_analysis.rs  euler_chamfer.rs  euler_fillet.rs  extrude_builder.rs  fillet_builder.rs  fillet_geometry.rs  lib.rs  nurbs_extrude_builder.rs  nurbs_revolve_builder.rs  revolve_builder.rs  sphere_builder.rs  torus_builder.rs
kernel/rustkernel-geom/: Cargo.toml
kernel/rustkernel-geom/src/: lib.rs
kernel/rustkernel-kernel/: CLAUDE.md  Cargo.toml
kernel/rustkernel-kernel/src/: analysis.rs  booleans.rs  export.rs  lib.rs  local_ops.rs  persistence.rs  primitives.rs  sweeps.rs  transforms.rs
kernel/rustkernel-math/: Cargo.toml
kernel/rustkernel-math/src/: lib.rs  polygon2d.rs  tri_tri.rs
kernel/rustkernel-sketch/: CLAUDE.md  Cargo.toml
kernel/rustkernel-sketch/src/: lib.rs  solver.rs
kernel/rustkernel-solvers/: CLAUDE.md
kernel/rustkernel-solvers/src/: lib.rs  plane_cone.rs  plane_cylinder.rs
kernel/rustkernel-topology/: CLAUDE.md  Cargo.toml
kernel/rustkernel-topology/src/: arena.rs  diagnostics.rs  euler.rs  evolution.rs  intersection.rs  lib.rs  mesh_cache.rs  store.rs  tessellate.rs  topo.rs
kernel/rustkernel-viewer/: Cargo.toml
kernel/rustkernel-viewer/src/: convert.rs  main.rs
mrsev/: CLAUDE.md  Cargo.toml
mrsev/src/: access.rs  closure.rs  evaluate.rs  feature.rs  lib.rs  model.rs  recognize.rs  volume.rs
param-cascade/: CLAUDE.md  Cargo.toml
param-cascade/src/: bulk.rs  cascade.rs  lib.rs  query.rs  registry.rs  tree.rs  types.rs
parameter-registry/: CLAUDE.md  Cargo.toml
parameter-registry/src/: lib.rs  naming.rs
parameter-registry/tests/: kernel_integration.rs
post/: DESIGN.md
rustkernel-boolean/: Cargo.toml
rustkernel-boolean/src/: broad_phase.rs  curve_trimming.rs  face_classifier.rs  face_selector.rs  face_splitter.rs  lib.rs  ops.rs  section.rs  topology_builder.rs
rustkernel-builders/: Cargo.toml
rustkernel-builders/src/: box_builder.rs  chamfer_builder.rs  cone_builder.rs  cylinder_builder.rs  edge_analysis.rs  euler_chamfer.rs  extrude_builder.rs  fillet_builder.rs  lib.rs  nurbs_extrude_builder.rs  nurbs_revolve_builder.rs  revolve_builder.rs  sphere_builder.rs  torus_builder.rs
rustkernel-geom/: Cargo.toml
rustkernel-geom/src/: lib.rs
rustkernel-kernel/: Cargo.toml
rustkernel-kernel/src/: lib.rs
rustkernel-math/: Cargo.toml
rustkernel-math/src/: lib.rs  polygon2d.rs  tri_tri.rs
rustkernel-primitives/: Cargo.toml
rustkernel-primitives/src/: box_builder.rs  cone_builder.rs  cylinder_builder.rs  geom.rs  kernel.rs  lib.rs  sphere_builder.rs  torus_builder.rs
rustkernel-primitives/src/boolean/: broad_phase.rs  curve_trimming.rs  face_classifier.rs  face_selector.rs  face_splitter.rs  ops.rs  section.rs  topology_builder.rs
rustkernel-primitives/src/solvers/: mod.rs  plane_cone.rs  plane_plane.rs  plane_sphere.rs
rustkernel-sketch/src/: constraint.rs
rustkernel-solvers/: Cargo.toml
rustkernel-solvers/src/: lib.rs  mesh_intersect.rs  nurbs_solver.rs  plane_cylinder.rs  plane_plane.rs  plane_sphere.rs  plane_torus.rs  refine.rs
rustkernel-topology/: Cargo.toml
rustkernel-topology/src/: arena.rs  diagnostics.rs  euler.rs  face_util.rs  geom_store.rs  intersection.rs  lib.rs  mesh_cache.rs  store.rs  tessellate.rs  topo.rs
rustkernel-viewer/: Cargo.toml
rustkernel-viewer/src/: convert.rs  main.rs
tool-library/: DESIGN.md
toolpath/: CLAUDE.md
translators/: CLAUDE.md  Cargo.toml
translators/src/: lib.rs
translators/src/step_parser/: entities.rs  mod.rs  tokenizer.rs
