[package]
name = "forgecam-gui"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
slint = { version = "~1.15", features = ["unstable-wgpu-28"] }
bytemuck = { version = "1", features = ["derive"] }
nalgebra = { version = "0.34", features = ["serde-serialize"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# ForgeCAM kernel
rustkernel-kernel = { path = "../kernel/rustkernel-kernel" }
rustkernel-topology = { path = "../kernel/rustkernel-topology" }
rustkernel-geom = { path = "../kernel/rustkernel-geom" }
rustkernel-builders = { path = "../kernel/rustkernel-builders" }

[build-dependencies]
slint-build = "~1.15"
