[package]
name = "rustkernel-boolean"
version = "0.1.0"
edition = "2021"

[dependencies]
rustkernel-math = { path = "../rustkernel-math" }
rustkernel-topology = { path = "../rustkernel-topology" }
rustkernel-geom = { path = "../rustkernel-geom" }
rustkernel-solvers = { path = "../rustkernel-solvers" }

[dev-dependencies]
rustkernel-builders = { path = "../rustkernel-builders" }
