[package]
name = "rustkernel-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
rustkernel-math = { path = "../rustkernel-math" }
rustkernel-topology = { path = "../rustkernel-topology" }
rustkernel-geom = { path = "../rustkernel-geom" }
rustkernel-solvers = { path = "../rustkernel-solvers" }
rustkernel-builders = { path = "../rustkernel-builders" }
rustkernel-boolean = { path = "../rustkernel-boolean" }
rustkernel-sketch = { path = "../rustkernel-sketch" }
curvo = { version = "0.1", features = ["serde"] }
bincode = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
zip = { version = "2", default-features = false, features = ["deflate"] }
